components/styles.module.css
@keyframes spinner {
  to {
    transform: rotate(360deg);
  }
}

.container {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 2vmin;

  font-size: 16px;
  line-height: 1.5;
  color: rgb(55, 53, 47);
  caret-color: rgb(55, 53, 47);
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica,
    'Apple Color Emoji', Arial, sans-serif, 'Segoe UI Emoji', 'Segoe UI Symbol';
}

.loadingIcon {
  animation: spinner 0.6s linear infinite;
  display: block;
  width: 24px;
  height: 24px;
  color: rgba(55, 53, 47, 0.4);
}

.main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.errorImage {
  max-width: 100%;
  width: 640px;
}

.footer {
  width: 100%;
  max-width: 1100px;
  margin: auto auto 0;
  padding: 8px;

  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.copyright {
  font-size: 80%;
  padding: 0.5em;
}

.settings,
.social {
  user-select: none;
}

.settings a,
.social a {
  cursor: pointer;
  font-size: 2em;
  display: inline-flex;
  padding: 0.25em;
  margin-right: 1vw;
  transition: color 250ms ease-out;
}

.settings a:last-of-type,
.social a:last-of-type {
  margin-right: 0;
}

.settings a:hover,
.social a:hover {
  transition: color 50ms ease-out;
}

.toggleDarkMode:hover {
  color: #2795e9;
}

.twitter:hover {
  color: #2795e9;
}

.mastodon:hover {
  color: #5a4be1;
}

.zhihu:hover {
  color: #0066ff;
}

.github:hover {
  /* color: #c9510c; */
  /* @wustep: make color purple instead of red */
  color: rgb(61, 10, 155);
}

.youtube:hover {
  color: #ff0000;
}

.linkedin:hover {
  color: #0077b5;
}

.newsletter:hover {
  color: #777777;
}

.comments {
  width: 100%;
  margin-top: 2em;
  border-top: 1px solid var(--fg-color-0);
}

@media only screen and (max-width: 566px) {
  .footer {
    flex-direction: column;
  }

  .footer > div {
    margin-top: 1em;
  }

  .footer .settings {
    order: 1;
  }
  .footer .social {
    order: 2;
  }
  .footer .copyright {
    order: 3;
  }
}

.pageActions {
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding: 6px 12px 12px;
}

.pageActions a {
  cursor: pointer;
  font-size: 24px;
  display: inline-flex;
  padding: 12px;
  margin-right: 1vw;
  border-radius: 50%;
  background: transparent;
  transition: all 250ms ease-out;
}

.pageActions a:last-of-type {
  margin-right: 0;
}

.pageActions a:hover {
  transition: all 50ms ease-out;
}

.likeTweet:hover {
  background: #f6e3e8;
  color: #e0265e;
}

.retweet:hover {
  color: #19bf64;
  background: #e5f2e8;
}

@media (max-width: 1360px) {
  .githubCorner {
    display: none;
  }
}

.githubCorner:hover .octoArm {
  animation: octocat-wave 560ms ease-in-out;
}

@keyframes octocat-wave {
  0%,
  100% {
    transform: rotate(0);
  }
  20%,
  60% {
    transform: rotate(-25deg);
  }
  40%,
  80% {
    transform: rotate(10deg);
  }
}

@media (max-width: 500px) {
  .githubCorner:hover .octoArm {
    animation: none;
  }

  .githubCorner .octoArm {
    animation: octocat-wave 560ms ease-in-out;
  }
}

.hidden {
  visibility: hidden;
}

